# qadmcli

./: .env.example  .gitignore  CLI_CONSISTENCY_FIX.md  Containerfile  ENHANCEMENT_SUMMARY.md  GLUESYNC01_PERMISSION_FIX.md  MSSQL_USER_MANAGEMENT.md  README.md  SCRIPTS.md  SEMICOLON_WARNING.md  TEST_CONNECTION_ADMIN_GUIDE.md  podman-compose.yaml  pyproject.toml  qadmcli.ps1  qadmcli.sh
config/: connection.yaml  connection.yaml.example
config/data/: funds.csv
config/schema/: ordertranx.yaml  subscriber.yaml  subscriber_cross_db.yaml  subscriber_mssql.yaml
config/tables/: customer.yaml  example_customer.yaml  example_orders.sql
docs/: database-schema-hierarchy.md  insurance-schema.md  mssql-change-tracking.md
schemas/: insurance.yaml  orders.yaml  ordertranx.yaml  subscriber.yaml
schemas/converted/: acblloanao.yaml  acblpf.yaml  amountmsc.yaml  as400agencydata.yaml  as400groupfaxclaimdata.yaml  as400groupfaxclaimtran.yaml  as400hospital.yaml  babrpf.yaml  bloupf.yaml  bnfhpfact.yaml  bnflpf.yaml  bnflpfact.yaml  bnfmpfact.yaml  casecrdtl.yaml  caseflg.yaml  casepf.yaml  casepfact.yaml  cashvalue.yaml  chdrpf.yaml  chdrpfact.yaml  cheqpf.yaml  chexpf.yaml  chqdpf.yaml  clbapf.yaml  clexpfact.yaml  clmppf.yaml  clmppfact.yaml  clntpf.yaml  clntpfact.yaml  crclaim.yaml  crclaimact.yaml  dcrbpf.yaml  descpf.yaml  descpfact.yaml  dtwlpf.yaml  firstrtrn.yaml  gbidpf.yaml  gbihpf.yaml  gbihtbn.yaml  gbnfl.yaml  (+409 more)
schemas/converted_cl5dta/: cl5dta_acmvpf.yaml  cl5dta_agcmpf.yaml  cl5dta_agexpf.yaml  cl5dta_aglfpf.yaml  cl5dta_clntpf.yaml  cl5dta_clrrpf.yaml  cl5dta_dmedpf.yaml  cl5dta_hbnfpf.yaml  cl5dta_hlrtpf.yaml  (+54 more)
scripts/: analyze_journal.py  analyze_syniti_structure.py  check_missing_tables.py  convert_syniti_to_qadmcli.py  demo_mssql_ct.ps1  demo_mssql_ct_auto.py  mockup_with_fk.py  mssql_ct_setup.sql  mssql_ct_setup_simple.sql  run_ct_demo.ps1  setup_mssql_ct.ps1  test_mssql_ct.py
(+178 files in other folders)
